# local-cli-orchestrator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  Makefile  README.md  SKILSS.md  pyproject.toml
docs/: robust_yaml_extraction.md
docs/guides/: adding-new-executors.md
docs/specs/: claude-code-integration.md  cursor-cli-integration.md  pipeline_frontend_spec.md
experiments/: README.md
scripts/: cleanup_experiments.py
specs/: PIPELINE_ARCHITECTURE.md
src/orx/: __init__.py  cli.py  config.py  exceptions.py  paths.py  runner.py  state.py
src/orx/context/: __init__.py  backlog.py  pack.py  sections.py  snippets.py  yaml_extractor.py
src/orx/dashboard/: __init__.py  __main__.py  config.py  server.py
src/orx/executors/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  fake.py  gemini.py  models.py  router.py
src/orx/gates/: __init__.py  base.py  docker.py  generic.py  pytest.py  ruff.py
src/orx/infra/: __init__.py  command.py
src/orx/knowledge/: __init__.py  evidence.py  guardrails.py  problems.py  updater.py
src/orx/metrics/: __init__.py  aggregator.py  collector.py  events.py  quality.py  schema.py  tokens.py  writer.py
src/orx/pipeline/: __init__.py  artifacts.py  constants.py  context_builder.py  definition.py  registry.py  runner.py
src/orx/prompts/: renderer.py
src/orx/stages/: __init__.py  base.py  decompose.py  implement.py  knowledge.py  plan.py  review.py  ship.py  spec.py  (+1 more)
tests/: __init__.py  conftest.py
tests/dashboard/: test_dashboard_integration.py  test_metrics_display.py  test_partials.py  test_timer.js
tests/integration/: __init__.py  test_base_branch.py  test_empty_diff.py  test_fix_loop.py  test_guardrails.py  test_happy_path.py  test_model_routing.py  test_pipeline_metrics_integration.py  test_repo_context.py  test_resume.py  test_stage_engines.py
tests/smoke/: test_llm_e2e.py
tests/unit/: __init__.py  test_backlog.py  test_config.py  test_context_sections.py  test_context_snippets.py  test_decompose_stage.py  test_fast_verify.py  test_fix_stage.py  test_generic_gate.py  test_guardrails_allowlist.py  test_guardrails_artifacts.py  test_knowledge_evidence.py  test_knowledge_guardrails.py  test_knowledge_problems.py  test_metrics_aggregator.py  test_metrics_collector.py  test_metrics_quality.py  test_metrics_schema.py  test_metrics_writer.py  test_metrics_writer_robust.py  test_model_routing.py  test_paths.py  test_pipeline.py  test_pipeline_executors.py  test_pipeline_runner_metrics.py  test_prompt_render.py  test_pytest_gate.py  test_repo_context.py  test_runner_overrides.py  test_runner_review_loop.py  test_stage_engines.py  test_state.py  test_transient_errors.py
(+66 files in other folders)
